tests/golden/fixtures/prefix-dp-no-dp-form/expected.err
Error: `jmp` has no direct-page form for this operand
   ╭─[ tests/golden/fixtures/prefix-dp-no-dp-form/input.k65:4:5 ]
   │
 4 │     jsr dp main
   │     ─────┬─────  
   │          ╰─────── forced direct-page operand
   │ 
   │ Help: drop the `dp` prefix; `jmp` only accepts absolute or long addressing here
───╯
